syntax = "proto3";

package deploy.v1;

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/deploy/v1";

// HelmRepoConfig enables a customer to install a helm repository
message HelmRepoConfig {
  string chart_repo = 1;
  string name = 2;
  string version = 3;
}
